--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*@layer components {
+  .Field {
+    @apply "w-full justify-center py-2 px-4 rounded-md shadow-md text-sm my-2 font-medium text-slate-800 bg-card-background cursor-pointer";
+  }
+}*/
